# fsearch

./: .clang-tidy  .editorconfig  .gitignore  .travis.yml  .version  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  INOTIFY_IMPLEMENTATION_PLAN.md  License  Makefile.am  NEWS  README.md  TODO.md  _config.yml  autogen.sh  configure.ac  control  copyright  docker-build.sh  fsearch-trunk.cron.d.ex  fsearch-trunk.doc-base.EX  fsearch.doap  index.html  index.md  manpage.xml.ex  menu.ex  meson.build  meson_options.txt  params.json  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_test.yml
AAA/: BBB
build-aux/: git-version-gen
copr/: fsearch_nightly.spec  fsearch_release.spec
data/: Makefile.am  fsearch.1  fsearch.desktop.in.in  gresource.xml  io.github.cboxdoerfer.FSearch.appdata.xml.in  io.github.cboxdoerfer.FSearch.desktop.in.in  io.github.cboxdoerfer.FSearch.metainfo.xml.in  meson.build
data/polkit/: io.github.cboxdoerfer.FSearch.policy
debian/: README  README.Debian  README.source  changelog  control  copyright  files  fsearch-trunk.default.ex  fsearch.cron.d.ex  fsearch.doc-base.ex  init.d.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
docs/: DOCKER_BUILD.md
help/: meson.build
help/C/: index.page  legal.xml  search_syntax.page  search_syntax_escaping.page  search_syntax_functions.page  search_syntax_modifiers.page  search_syntax_operators.page  search_syntax_wildcards.page
po/: LINGUAS  Makevars  POTFILES.in  ar.po  ber.po  bg.po  ca.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  frc.po  fsearch.pot  ga.po  gl.po  he.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  ko.po  lt.po  meson.build  mr.po  nb_NO.po  nl.po  pl.po  prs.po  pt-br.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+10 more)
snap/: snapcraft.yaml
src/: .clang-format  Makefile.am  array.c  array.h  btree.c  btree.h  clipboard.c  clipboard.h  config.c  config.h  database.c  database.h  database_node.c  database_node.h  database_search.c  database_search.h  debug.h  fsearch.c  fsearch.glade  fsearch.h  fsearch_array.c  fsearch_array.h  fsearch_cli.c  fsearch_cli.h  fsearch_clipboard.c  fsearch_clipboard.h  fsearch_config.c  fsearch_config.h  fsearch_database.c  fsearch_database.h  fsearch_database2.c  fsearch_database2.h  fsearch_database_chunked_array.c  fsearch_database_chunked_array.h  fsearch_database_entries_container.c  fsearch_database_entries_container.h  fsearch_database_entry.c  fsearch_database_entry.h  fsearch_database_entry_flags.h  fsearch_database_entry_info.c  (+199 more)
src/core/: mod.rs  model.rs  monitor.rs  scanner.rs  search.rs
src/tests/: meson.build  test_array.c  test_config.c  test_database.c  test_database_chunked_array.c  test_database_entry.c  test_database_exclude.c  test_database_file.c  test_database_include.c  test_database_index_store.c  test_query.c  test_size_utils.c  test_string_utils.c  test_time_utils.c  test_token.c  test_win32_compat.c
