help_files = [
    'index.page',
    'search_syntax.page',
    'search_syntax_escaping.page',
    'search_syntax_functions.page',
    'search_syntax_modifiers.page',
    'search_syntax_operators.page',
    'search_syntax_wildcards.page',
    'legal.xml'
]

help_media = [
    'figures/FSearch.png'
]

gnome.yelp(
    meson.project_name(),
    media: help_media,
    sources: help_files
)